--- a/pom.xml
+++ b/pom.xml
@@ -31,17 +31,29 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!---->
+        <!--        <dependency>-->
+        <!--            <groupId>org.apache.shiro</groupId>-->
+        <!--            <artifactId>shiro-spring-boot-web-starter</artifactId>-->
+        <!--            <version>1.4.0</version>-->
+        <!--        </dependency>-->
+        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.github.theborakompanioni/thymeleaf-extras-shiro &ndash;&gt;-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.theborakompanioni</groupId>-->
+        <!--            <artifactId>thymeleaf-extras-shiro</artifactId>-->
+        <!--            <version>2.0.0</version>-->
+        <!--        </dependency>-->
 
         <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-log4j</artifactId>-->
-            <!--<version>1.3.8.RELEASE</version>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-log4j</artifactId>-->
+        <!--<version>1.3.8.RELEASE</version>-->
         <!--</dependency>-->
 
         <!--日志-->
         <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-log4j2</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
         <!--Mysql驱动-->
@@ -50,6 +62,14 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.6</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
 
         <!--druid数据库连接池-->
         <dependency>
@@ -65,6 +85,18 @@
             <version>2.0.1</version>
         </dependency>
 
+        <!-- pageHelper-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.pagehelper</groupId>-->
+        <!--            <artifactId>pagehelper-spring-boot-starter</artifactId>-->
+        <!--            <version>1.2.2</version>-->
+        <!--        </dependency>-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.8</version>
+        </dependency>
+
         <!--mybatis逆向工程文件 -->
         <dependency>
             <groupId>org.mybatis.generator</groupId>
@@ -72,12 +104,12 @@
             <version>1.3.5</version>
         </dependency>
 
-        <!-- thymeleaf模板引擎 -->
-<!--        <dependency>-->
-<!--            <groupId>org.thymeleaf</groupId>-->
-<!--            <artifactId>thymeleaf</artifactId>-->
-<!--            <version>3.0.9.RELEASE</version>-->
-<!--        </dependency>-->
+        <!-- thymeleaf模板引擎-->
+        <dependency>
+            <groupId>org.thymeleaf</groupId>
+            <artifactId>thymeleaf</artifactId>
+            <version>3.0.9.RELEASE</version>
+        </dependency>
 
         <!--引入thymeleaf的依赖 -->
         <dependency>
@@ -122,9 +154,10 @@
 
     </dependencies>
 
-    <!--springboot打包插件-->
+
     <build>
         <plugins>
+            <!--springboot打包插件-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
