--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -42,7 +42,7 @@ spring:
 #mybatis的xml文件配置
 mybatis:
   # 映射文件所在路径
-  mapper-locations: classpath:mapper/*.xml
+  mapper-locations: classpath:mapping/*.xml
   # pojo类所在包路径
   type-aliases-package: cn.liwei08.entity
 # pageHelper配置
