--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <dependencies>
+        <!-- starter开始 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -31,79 +32,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <!---->
-        <!--        <dependency>-->
-        <!--            <groupId>org.apache.shiro</groupId>-->
-        <!--            <artifactId>shiro-spring-boot-web-starter</artifactId>-->
-        <!--            <version>1.4.0</version>-->
-        <!--        </dependency>-->
-        <!--        &lt;!&ndash; https://mvnrepository.com/artifact/com.github.theborakompanioni/thymeleaf-extras-shiro &ndash;&gt;-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.theborakompanioni</groupId>-->
-        <!--            <artifactId>thymeleaf-extras-shiro</artifactId>-->
-        <!--            <version>2.0.0</version>-->
-        <!--        </dependency>-->
-
-        <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-log4j</artifactId>-->
-        <!--<version>1.3.8.RELEASE</version>-->
-        <!--</dependency>-->
-
-        <!--日志-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-log4j2</artifactId>
-        </dependency>
-        <!-- springboot引入aop-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
-
-        <!--aspectj -->
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjrt</artifactId>
-            <version>1.9.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.9.2</version>
-        </dependency>
-<!--        <dependency>-->
-<!--            <groupId>cjlib</groupId>-->
-<!--            <artifactId>cglib</artifactId>-->
-<!--            <version></version>-->
-<!--        </dependency>-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>4.3.13.RELEASE</version>
-        </dependency>
-        <!--Mysql驱动-->
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/com.alibaba/easyexcel -->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>easyexcel</artifactId>
-            <version>1.1.1</version>
-        </dependency>
-
-
-        <!--druid数据库连接池-->
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.1.10</version>
-        </dependency>
 
         <!--mybatis跟springboot的依赖-->
         <dependency>
@@ -112,30 +40,16 @@
             <version>2.0.1</version>
         </dependency>
 
-        <!-- pageHelper-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.pagehelper</groupId>-->
-        <!--            <artifactId>pagehelper-spring-boot-starter</artifactId>-->
-        <!--            <version>1.2.2</version>-->
-        <!--        </dependency>-->
+        <!-- log4j2日志 -->
         <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.1.8</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-log4j2</artifactId>
         </dependency>
 
-        <!--mybatis逆向工程文件 -->
+        <!-- springboot引入aop-->
         <dependency>
-            <groupId>org.mybatis.generator</groupId>
-            <artifactId>mybatis-generator-core</artifactId>
-            <version>1.3.5</version>
-        </dependency>
-
-        <!-- thymeleaf模板引擎-->
-        <dependency>
-            <groupId>org.thymeleaf</groupId>
-            <artifactId>thymeleaf</artifactId>
-            <version>3.0.9.RELEASE</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
         <!--引入thymeleaf的依赖 -->
@@ -144,11 +58,26 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-        <!--springboot测试用的-->
+        <!--springboot测试-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <!-- starter完毕 -->
+
+        <!--Mysql驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
+        <!-- 阿里巴巴excel-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>1.1.1</version>
         </dependency>
 
         <!-- http协议 -->
@@ -165,7 +94,7 @@
             <version>1.2.47</version>
         </dependency>
 
-        <!-- get set方法注解 -->
+        <!-- lombok方法注解 -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
